--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".StatusActivity" />
-    </application>
+		<activity android:name=".UserOpenedNotificationActivity" />
+        </application>
 
 </manifest>
